<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#020202"

    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/calculation"
        android:text="@string/calculation_s"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:text="Calculation's" />

    <TextView
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/please_enter_room_measurements"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextViewEdits"
        tools:text="Please enter room measurements" />

    <EditText
        android:id="@+id/et_input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription=""
        android:ems="10"
        android:hint="@string/length"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/et_input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription=""
        android:ems="10"
        android:hint="@string/Height"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/et_input3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription=""
        android:ems="10"
        android:hint="@string/width"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textStyle="bold"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_Meters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/white"
            android:checked="true"
            android:contentDescription="@string/meters"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Meters"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            tools:targetApi="lollipop"
            tools:text="Meters" />

        <RadioButton
            android:id="@+id/radio_Feet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@android:color/darker_gray"
            android:contentDescription="@string/feet"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Feet"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"
            tools:targetApi="lollipop"
            tools:text="Feet" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <Button
            android:id="@+id/bt_calculate2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bt_calculate1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@android:color/white"
            android:contentDescription="@string/app_name"
            android:onClick="calculateRoom2"
            android:text="@string/calculate_feet"
            tools:text="Calculate In Feet" />

        <Button
            android:id="@+id/btnGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_calculate1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:contentDescription="@string/next"
            android:onClick="record_page"
            android:text="@string/Next"
            tools:text="Next" />

        <Button
            android:id="@+id/bt_calculate1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:background="@android:color/white"
            android:contentDescription="@string/app_name"
            android:onClick="calculateRoom"
            android:text="@string/calculate_meters"
            tools:text="Calculate In Meters " />

    </RelativeLayout>

</LinearLayout>